--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is Namaste React",
-  "source": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -21,5 +20,13 @@
   "homepage": "https://github.com/vanshu778/Namaste-React#readme",
   "devDependencies": {
     "parcel": "^2.15.4"
-  }
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "browserslist": [
+    "last 2 Chrome version",
+    "last 2 Firefox version"
+  ]
 }
