--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "parcel": "^2.15.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.17.0",
     "tailwindcss": "^4.1.11"
   },
