--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   },
   "homepage": "https://github.com/vanshu778/Namaste-React#readme",
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@testing-library/react": "^16.3.0",
+    "babel-jest": "^30.0.4",
+    "jest": "^30.0.4",
     "parcel": "^2.15.4"
   },
   "dependencies": {
