--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/react": "^16.3.0",
     "babel-jest": "^30.0.4",
     "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "parcel": "^2.15.4"
   },
   "dependencies": {
